<resources>
    <string name="app_name">Beechat</string>
    <string name="select_device">Nearby Beenodes</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="connecting_device_title">Connecting to remote Beenode</string>
    <string name="scanning_device_title">Scanning for surrounding Beenodes</string>
    <string name="startup_device_title">Scanning ID of your Clip</string>
    <string name="connecting_device_description">Please wait while connecting to the selected Beenode...</string>
    <string name="scanning_devices">Please wait while scanning for surrounding Beenodes...</string>
    <string name="startup_device">Please wait while scanning the ID of your Clip...</string>
    <string name="error_connecting_title">Error connecting</string>
    <string name="error_connecting_description">Could not connect to the selected Beenode: %1$s</string>
    <string name="eula_agreement">I agree <u>to the Privacy Policy and to the End User License Agreement</u></string>
    <string name="eula_text">EULA text</string>
    <string name="language">ENGLISH</string>
    <string name="eulaEmpty">EULA is empty!</string>
    <string name="selectLanguageLabel">Select Language</string>
    <string name="languageLabel">Language</string>
    <string name="importLabelButton">Import</string>
    <string name="my_id_nempty">My ID \nempty</string>
    <string name="passwordLabel">Password</string>
    <string name="confirm_passwordLabel">Confirm Password</string>
    <string name="finishLabelButton">Accept</string>
    <string name="log_inLabel">Log in</string>
    <string name="import_accountButtonLabel">Import Account</string>
    <string name="create_accountButtonLabel">Create account</string>
    <string name="add_contactLabel">Add contact</string>
    <string name="addressLabelContact">Address</string>
    <string name="nameLabelContact">Name</string>
    <string name="add_contactButtonLabel">Add contact</string>
    <string name="conversationsLabel">Conversations</string>
    <string name="broadcast_my_idButtonLabel">Broadcast my ID</string>
    <string name="baud_rateLabel">Radio speed</string>
    <string name="applyButtonLabel">Apply</string>
    <string name="data_settingsLabel">Saved data</string>
    <string name="wipe_dataButtonLabel">Wipe data</string>
    <string name="yesButtonLabel">Yes</string>
    <string name="noButtonLabel">No</string>
    <string name="areYouSureLabel">Are you sure?</string>
    <string name="okButtonLabel">OK</string>
    <string name="successLabel">Success</string>
    <string name="backLabel">Back</string>
    <string name="edit_contactLabel">Edit contact</string>
    <string name="log_outButtonLabel">Log Out</string>
    <string name="exportButtonLabel">EXPORT</string>
    <string name="codeWordText">Code word</string>
    <string name="editContactLabel">Edit Contact</string>
    <string name="editContactAddressLabel">Address</string>
    <string name="editContactNameLabel">Name</string>
    <string name="editContactUpdateContactButton">Update Contact</string>
    <string name="settingsDarkModeLabel">Dark Mode</string>
    <string name="settingsSavedDataButton">Saved Data</string>
    <string name="splashMainLabel">Start using your Beechat radio by plugging it in, and then clicking on the Connect button below</string>
    <string name="splashReqButton">Connect to device</string>
    <string name="splashSkipButton">Skip</string>
    <string name="wellcomeLabel">Account setup</string>
    <string name="wellcomeUsernameLabel">Username</string>
    <string name="settingsLabel">Settings</string>
</resources>


