<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".WelcomeScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/active"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/textViewMyID3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="0"
            android:background="@drawable/top_name"
            android:fontFamily="@font/nunito_regular"
            android:lines="1"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/wellcomeLabel"
            android:textAlignment="gravity"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_for_button"
            android:fontFamily="@font/nunito_regular"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/importLabelButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/baudRateTextView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/nunito_regular"
                    android:text="Your beechat address"
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewMyID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="@font/nunito_regular"
                    android:lines="1"
                    android:text="@string/my_id_nempty"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/regenerateKey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:background="@color/active"
                android:foregroundTint="@color/white"
                app:srcCompat="@android:drawable/ic_menu_rotate" />

        </LinearLayout>

        <EditText
            android:id="@+id/logoName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/nunito_regular"
            android:hint="@string/wellcomeUsernameLabel"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordOne"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:fontFamily="@font/nunito_regular"
                android:hint="@string/passwordLabel"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/hidePassButton"
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@color/active"
                android:focusable="auto"
                android:tint="@android:color/white"
                app:srcCompat="@android:drawable/ic_menu_view" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewEULA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/eula"
            android:fontFamily="@font/nunito_regular"
            android:foregroundTint="@android:color/white"
            android:isScrollContainer="true"
            android:maxHeight="1000dp"
            android:minHeight="100dp"
            android:paddingHorizontal="20dp"
            android:scrollbars="horizontal"
            android:text="@string/eula_text"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/agreementCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@android:color/white"
            android:fontFamily="@font/nunito_regular"
            android:padding="10dp"
            android:scrollHorizontally="false"
            android:text="@string/eula_agreement"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/top_name"
            android:text="TextView" />

        <Button

            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_for_button"
            android:enabled="false"
            android:fontFamily="@font/nunito_regular"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/finishLabelButton"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>