<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context=".SettingsScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:background="@color/active"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMyID2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="0"
                android:background="@drawable/top_name"
                android:fontFamily="@font/nunito_regular"
                android:lines="1"
                android:paddingTop="5dp"
                android:paddingBottom="15dp"
                android:text="@string/settingsLabel"
                android:textAlignment="gravity"
                android:textColor="@android:color/white"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/baudRateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/baud_rateLabel"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_regular"
                android:text="Higher speed decreases transmittion distance"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

            <SeekBar
                android:id="@+id/baudRateSeekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="3"
                android:progressTint="@color/inActive"
                android:thumbTint="@color/inActive" />

            <TextView
                android:id="@+id/labelBaudRateTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/nunito_regular"
                android:lines="2"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/baudRateTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_regular"
                android:text="Your radio address"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/settingsRadioAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_regular"
                android:text="none"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/baudRateTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_regular"
                android:text="Your beechat address"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/settingsBeechatAddr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/nunito_regular"
                android:text="null"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonApply"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_corner_for_button"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/applyButtonLabel"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/savedDataButton"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_corner_for_button"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/settingsSavedDataButton"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonReconnect"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_corner_for_button"
                    android:fontFamily="@font/nunito_regular"
                    android:text="RECONNECT TO DEVICE"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/buttonLogOut"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_corner_for_button"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/log_outButtonLabel"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:text="Version 0.1.8"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>